fix infoboard countdown jumping due to non-monospaced digits in orbitron font

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -56,3 +56,9 @@ html, body {
     font-family: Orbitron;
     font-weight: 900;
 }
+
+.counter > .digit {
+  display: inline-block;
+  text-align: center;
+  width: 0.85em;
+}
